# tensorcore

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README_EDUCATIONAL.md  README_ROADMAP.md  debug_conv.cpp  test_conv2d.cpp  test_core_functionality.cpp  test_simd_performance.cpp  test_simple_conv.cpp  test_sklearn.py  test_sklearn_direct.py  test_sklearn_simple.py
.github/: FUNDING.yml
benchmarks/: CMakeLists.txt
docs/: sklearn_api.md
docs/api/: README.md  activation_functions.md  basic_operations.md  linear_algebra.md  loss_functions.md  mathematical_functions.md  neural_network_layers.md  optimizer_classes.md  reduction_operations.md  shape_operations.md  tensor_creation.md
docs/internals/: mathematics.md  memory_management.md  simd_optimizations.md
docs/tutorials/: getting_started.md
examples/: basic_tensor_ops.py  linear_regression.py  neural_network.py  sklearn_style_ml.py
include/tensorcore/: activations.hpp  autograd.hpp  layers.hpp  losses.hpp  memory_pool.hpp  operations.hpp  optimizers.hpp  simd_utils.hpp  sklearn.hpp  tensor.hpp  utils.hpp
python/: CMakeLists.txt  __init__.py  requirements.txt  setup.py  tensorcore_core.cpp
python/data/: __init__.py  datasets.py  transforms.py
python/nn/: __init__.py  activations.py  layers.py  losses.py
python/optim/: __init__.py  optimizers.py
python/sklearn/: __init__.py  linear_model.py  metrics.py  model_selection.py  preprocessing.py
python/utils/: __init__.py  data_utils.py
scripts/: benchmark.sh  build.sh  test.sh
src/: activations.cpp  autograd.cpp  layers.cpp  losses.cpp  memory_pool.cpp  operations.cpp  optimizers.cpp  simd_utils.cpp  sklearn.cpp  tensor.cpp  utils.cpp
tests/: CMakeLists.txt  test_basic.cpp  test_edge_cases.cpp  test_operations.py  test_performance.cpp  test_tensor.py  test_tensor_operations.cpp
